[gd_scene load_steps=9 format=3 uid="uid://b7cg1vu48eirk"]

[ext_resource type="Script" path="res://badguy.gd" id="1_5upng"]
[ext_resource type="Texture2D" uid="uid://c50ye5uka2ixm" path="res://icon.svg" id="2_841lr"]
[ext_resource type="Texture2D" uid="uid://cbjtqb01gg083" path="res://Assets/Round1_Target_Sanity.PNG" id="3_e46qw"]
[ext_resource type="Texture2D" uid="uid://3au6foen0ihf" path="res://Assets/Round1_Target_Easy.PNG" id="4_wt87t"]
[ext_resource type="Texture2D" uid="uid://dm7fsp34rtx3v" path="res://Assets/Round1_Target_Medium.PNG" id="5_m57lo"]
[ext_resource type="Texture2D" uid="uid://jirg2ikssweo" path="res://Assets/Round1_Target_Rare.PNG" id="6_cb6t3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7b7qr"]
size = Vector2(128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ummvt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_e46qw")
}],
"loop": true,
"name": &"DangerTarget",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_wt87t")
}],
"loop": true,
"name": &"EasyTarget",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_m57lo")
}],
"loop": true,
"name": &"MediumTarget",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_cb6t3")
}],
"loop": true,
"name": &"RareTarget",
"speed": 5.0
}]

[node name="Node2D" type="Area2D"]
script = ExtResource("1_5upng")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_841lr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7b7qr")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.11, 0.11)
sprite_frames = SubResource("SpriteFrames_ummvt")
animation = &"EasyTarget"

[node name="EasyTargetStall" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="EasyTargetStall" to="." method="_on_easy_target_stall_timeout"]
